<resources>
    <string name="app_name">GoodWeather</string>
    <string name="icon">Icon</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="city_name">City name</string>
    <string name="ok">Ok</string>
    <string name="forecast_fragment_label">Forecast</string>
    <string name="forecast_details_fragment_label">Forecast details</string>
    <string name="details">Details</string>
    <string name="profile_fragment_label">Profile</string>
    <string name="personal_info">Personal info</string>
    <string name="email_address">Email address</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="full_name">Full name</string>
    <string name="invalid_form">Invalid form</string>
    <string name="photo">photo</string>
    <string name="cancel">CANCEL</string>
    <string name="settings">Settings</string>
    <string name="forecast_settings_title">Forecast</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="tracking_fragment_label">Tracking</string>
    <string name="tracking_duration">Duration</string>
    <string name="tracking_speed">Speed</string>
    <string name="tracking_pace">Pace</string>
    <string name="is_subscriber">Is subscriber</string>
    <string name="save">Save</string>
</resources>