<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/ForecastFragment">

    <fragment
        android:id="@+id/ForecastFragment"
        android:name="pl.training.goodweather.forecast.adapter.view.ForecastFragment"
        android:label="@string/forecast_fragment_label">
        <action
            android:id="@+id/showForecastDetails"
            app:destination="@id/ForecastDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/ForecastDetailsFragment"
        android:name="pl.training.goodweather.forecast.adapter.view.ForecastDetailsFragment"
        android:label="@string/forecast_details_fragment_label">
        <action
            android:id="@+id/showForecast"
            app:destination="@id/ForecastFragment" />
    </fragment>

    <fragment
        android:id="@+id/ProfileFragment"
        android:name="pl.training.goodweather.profile.adapter.view.ProfileFragment"
        android:label="@string/profile_fragment_label">
    </fragment>

</navigation>